--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
                     background-color: red;
                 }
             }
+            @media only screen and (min-width: 601px) and (max-width:800px) { /* 601px - max */
+                body{
+                    background-color: green;
+                }
+                .box{
+                    width: 400px;
+                    height: 400px; 
+                }
+                .box2{
+                    display: none;
+                }
+            }
             @media only screen and (min-width: 601px)  { /* 601px - max */
                 body{
                     background-color: green;
